--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 </head>
 
 <body>
-
+  <header>
+    <div class="container container-nav">
+      <div class="title">
+        <h1>Living the simple life</h1>
+        <p class="subtitle">A blog exploring minimalist in life</p>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#" class="current-page">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Recent posts</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 
 </html>
