--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <img src="images/mike-baker.jpg" alt="Mike Baker">
     </div>
     <h2>My name is John and living the simple life saved my life</h2>
-    <p>I used to be a pack rat. I had so many things that I thought that I loved, but the truth was I couldn't even appreciate any of it because there was too much.</p>
+    <p><strong>I used to be a pack rat.</strong> I had so many things that I thought that I loved, but the truth was I couldn't even appreciate any of it because there was too much.</p>
     <p>Things were terrible. I had a job that I hated, a home that I didn't want to live in, and I couldn't hold a relationship.</p>
     <h3>How I turned things around</h3>
     <p>I was on the verge of a breakdown when I got rid of everything. I literally put 90% of my possessions in the garbage, sold my place and moved into a smaller apartment, and I quit my job.</p>
