--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <div class="container container-nav">
+    <div class="container container-flex">
       <div class="title">
         <h1>Living the simple life</h1>
         <p class="subtitle">A blog exploring minimalist in life</p>
@@ -26,7 +26,7 @@
       </nav>
     </div>
   </header>
-  <div class="container">
+  <div class="container container-flex">
     <main role="main">
       <article class="article-featured">
         <h2 class="article-title">Finding simplicity in life</h2>
