--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </div>
   <footer>
     <div class="container">
-      <p>Living the Simple Life</p>
+      <p><strong>Living the Simple Life</strong></p>
       <p>Copyright 2019</p>
     </div>
   </footer>
