--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav>
         <ul>
           <li><a href="index.html" class="current-page">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="about-me.html">About me</a></li>
           <li><a href="recent-post.html">Recent posts</a></li>
         </ul>
       </nav>
