--- a/about-me.html
+++ b/about-me.html
@@ -20,8 +20,8 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about-me.html">About me</a></li>
-          <li><a href="recent-post.html" class="current-page">Recent posts</a></li>
+          <li><a href="about-me.html" class="current-page">About me</a></li>
+          <li><a href="recent-post.html">Recent posts</a></li>
         </ul>
       </nav>
     </div>
